--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,9 @@
 # action.yml
 name: 'Hello World'
 description: 'Greet someone and record the time'
+branding:
+  icon: 'heart'
+  color: 'red'
 inputs:
   who-to-greet:  # id of input
     description: 'Who to greet'
